apps/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-api
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio-api
    app.kubernetes.io/component: api
spec:
  clusterIP: None
  ports:
    - port: 9000
      targetPort: 9000
      name: api
---
apiVersion: v1
kind: Service
metadata:
  name: minio-web
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/instance: minio-web
    app.kubernetes.io/component: web
spec:
  clusterIP: None
  ports:
    - port: 9001
      targetPort: 9001
      name: web
---
apiVersion: v1
kind: Service
metadata:
  name: minio # This MUST match the serviceName in the StatefulSet
  namespace: minio
  labels:
    app.kubernetes.io/name: minio
    app.kubernetes.io/component: minio
spec:
  type: ClusterIP
  ports:
    - port: 9000
      name: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: minio # Selects the pods created by the StatefulSet
    app.kubernetes.io/component: minio # Selects the pods created by the StatefulSet
