apps/minio/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-web-httproute
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - minio.home.alden.ai
  rules:
  - backendRefs:
    - name: minio-web
      port: 9001
    # matches:
    # - path:
    #     type: PathPrefix
    #     value: /
      group: ''
      kind: Service
      weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: minio-api-httproute
spec:
  parentRefs:
  - name: default-https-gateway
    namespace: istio-system
    group: gateway.networking.k8s.io
    kind: Gateway
  hostnames:
  - minio-api.home.alden.ai
  rules:
  - backendRefs:
    - name: minio-api
      port: 9000
    # matches:
    # - path:
    #     type: PathPrefix
    #     value: /
      group: ''
      kind: Service
      weight: 1
    matches:
      - path:
          type: PathPrefix
          value: /
